#20 Fix vulnerability of hardcoded password in a test file